# balancing_robot

./: .gitignore  python_test_tcp_client.py
client/: gui.py  tcp_client.py
pico/: CMakeLists.txt  readme  readme.md
pico/include/server/: pico_server.h
pico/src/: main.c
pico/src/pico_server/: pico_server.c
